<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vote_root_linear"
    android:orientation="vertical"
    android:layout_width="60dp"
    android:layout_height="match_parent"
    android:background="@drawable/my_border_white"
    tools:context=".judge.fragments.vote.VoteFragment">


        <TextView
            android:id="@+id/vote_text"
            android:layout_width="60dp"
            android:text="@string/vote"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@drawable/button_animation"
            style="@style/fragments_labels"/>

        <Button
            android:id="@+id/vote_pl1_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/one"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl2_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/two"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl3_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/three"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl4_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/four"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl5_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/five"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl6_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/six"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl7_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/seven"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl8_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/eight"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl9_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="1.5dp"
            android:includeFontPadding="false"
            android:text="@string/nine"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>

        <Button
            android:id="@+id/vote_pl10_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:includeFontPadding="false"
            android:text="@string/ten"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:stateListAnimator="@drawable/button_animation"/>
    </LinearLayout>

