<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stats_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".judge.screens.stats.StatsFragment">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/stats_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_half"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/stats_recycler">

                <TextView
                    android:id="@+id/current_game_slot_text"
                    android:layout_weight="0.7"
                    android:text="@string/number"
                    style="@style/recycler_style" />

                <TextView
                    android:id="@+id/current_game_name_text"
                    android:layout_weight="3.6"
                    android:maxLines="1"
                    android:text="@string/names"
                    style="@style/recycler_style" />

                <TextView
                    android:id="@+id/current_game_card_text"
                    android:layout_weight="0.7"
                    android:text="crd"
                    style="@style/recycler_style" />

                <TextView
                    android:id="@+id/current_game_win_text"
                    android:layout_weight="1"
                    android:text="@string/win"
                    style="@style/recycler_style" />

                <TextView
                    android:id="@+id/current_game_rating_text"
                    android:layout_weight="1"
                    android:text="@string/rating"
                    style="@style/recycler_style" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stats_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/stats_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/stats_current_game_item" />


</androidx.constraintlayout.widget.ConstraintLayout>